# test_for_hitalent

./: .gitignore  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
app/: build.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_09_23_1527-e554e51ab8eb_created_questions_table.py  2025_09_23_1748-2512cf152b84_created_answers_table_added_.py
app/api/: __init__.py  answers.py  questions.py
app/core/: __init__.py  config.py
app/core/exceptions/: __init__.py  db_exceptions.py  register_exceptions_handler.py
app/core/middlewares/: __init__.py  register_middlewares.py  setup_logger.py
app/core/models/: __init__.py  base.py  db_setup.py  entities.py
app/core/models/entities/: __init__.py  quesion.py
app/core/models/mixins/: __init__.py  created_at.py  int_id_pk.py  text.py
app/core/schemas/: __init__.py  answer.py  answers.py  question.py  validators.py
app/core/schemas/mixins/: __init__.py  created_at.py  int_id_pk.py  text.py
app/crud/: __init__.py  answers.py  questions.py
app/services/: __init__.py  answers.py  questions.py
tests/: conftest.py
tests/integration/: test_questions_api.py
