[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.117.1"
uvicorn = {extras = ["standart"], version = "^0.36.0"}
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
gunicorn = "^23.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
asyncpg = "^0.30.0"
